--- a/huafei.html
+++ b/huafei.html
@@ -15,7 +15,7 @@
     <style type ="text/css">
        img{width: 100%;
         height: 30%;
-        background-image: url('show.png');
+        background-image: url('views/show.png');
 
         background-size: 100%;
 
@@ -66,7 +66,7 @@
 </head>
 <body style="margin: 0px" ng-app="myApp" ng-controller="myCtrl">
 <div  id="top_tex" >购买中心</div>
-<img src="hello.png">
+<img src="views/hello.png">
 <br>
 <div style="margin-top: 6px; margin-bottom: 6px ">产品介绍</div>
 <div class="columns">
